# ChangeLog for media-gfx/gifsicle
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gifsicle/ChangeLog,v 1.28 2009/11/18 23:27:56 maekke Exp $

  18 Nov 2009; Markus Meier <maekke@gentoo.org> -gifsicle-1.52.ebuild:
  old

  18 Nov 2009; Raúl Porcel <armin76@gentoo.org> gifsicle-1.55.ebuild:
  sparc stable wrt #286399

  07 Oct 2009; nixnut <nixnut@gentoo.org> gifsicle-1.55.ebuild:
  ppc stable #286399

  29 Sep 2009; Markus Meier <maekke@gentoo.org> gifsicle-1.55.ebuild:
  amd64/x86 stable, bug #286399

*gifsicle-1.55 (04 Jun 2009)

  04 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +gifsicle-1.55.ebuild:
  Version bump 'cause I needed this.

  07 Feb 2009; Markus Meier <maekke@gentoo.org> -gifsicle-1.44.ebuild,
  gifsicle-1.52.ebuild:
  assign RDEPEND, remove old

  27 Jan 2009; Raúl Porcel <armin76@gentoo.org> gifsicle-1.52.ebuild:
  sparc/x86 stable wrt #256171

  24 Jan 2009; nixnut <nixnut@gentoo.org> gifsicle-1.52.ebuild:
  ppc stable #256171

*gifsicle-1.52 (17 Dec 2008)

  17 Dec 2008; Markus Meier <maekke@gentoo.org> +gifsicle-1.52.ebuild:
  version bump, reported in bug #250596

  22 May 2008; Markus Meier <maekke@gentoo.org> gifsicle-1.44.ebuild:
  shorten DESCRIPTION

  15 Jan 2008; Fabian Groffen <grobian@gentoo.org> gifsicle-1.44.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; gifsicle-1.44.ebuild:
  Drop virtual/x11 references.

  03 Jun 2007; Raúl Porcel <armin76@gentoo.org> gifsicle-1.44.ebuild:
  Add ~alpha wrt #173108

  24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> gifsicle-1.44.ebuild:
  Stable on sparc

  15 Mar 2007; Markus Rothe <corsair@gentoo.org> gifsicle-1.44.ebuild:
  Stable  on ppc64; bug #170840

  12 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> gifsicle-1.44.ebuild:
  Keyworded ~sparc wrt #170430

  30 Aug 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -gifsicle-1.40.ebuild: