@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gifsicle/gifsicle-1.55.ebuild,v 1.4 2009/11/18 18:41:52 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gifsicle/gifsicle-1.55.ebuild,v 1.5 2010/01/07 22:06:05 fauli Exp $
 
 DESCRIPTION="A command-line tool for creating, editing, and getting information about GIF images and animations"
 HOMEPAGE="http://www.lcdf.org/~eddietwo/gifsicle/"
@@ -8,7 +8,7 @@ SRC_URI="http://www.lcdf.org/~eddietwo/gifsicle/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha amd64 ppc ~ppc64 sparc x86"
+KEYWORDS="~alpha amd64 ppc ~ppc64 sparc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
 IUSE="X"
 
 RDEPEND="X? ( x11-libs/libX11
