@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/gifsicle
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gifsicle/ChangeLog,v 1.28 2009/11/18 23:27:56 maekke Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gifsicle/ChangeLog,v 1.29 2010/01/07 22:06:05 fauli Exp $
+
+  07 Jan 2010; Christian Faulhammer <fauli@gentoo.org> gifsicle-1.55.ebuild:
+  Transfer Prefix keywords
 
   18 Nov 2009; Markus Meier <maekke@gentoo.org> -gifsicle-1.52.ebuild:
   old
